# apertium-eng-afr

./: .gitattributes  Makefile.am  README  apertium-en-af.af-en.t1x  apertium-en-af.af.dix  apertium-en-af.af.dix.xml  apertium-en-af.en-af.dix  apertium-en-af.en-af.dix.xml  apertium-en-af.en.dix  apertium-eng-afr.afr-eng.t1x  configure.ac  modes.xml
